[package]
name = "flare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bip39 = "2.0.0"
borsh = { version = "1.3.1", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
convert_case = { version = "0.6.0", features = ["random"] }
flate2 = "1.0.28"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.114"
solana-clap-utils = "1.18.2"
solana-client = "1.18.1"
solana-program = "1.18.1"
solana-sdk = "1.18.1"
sol-chainsaw = "0.0.2"
serde_yml = "0.0.4"
anchor-cli = "0.30.1"
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
anchor-syn = { version = "0.30.1", features = ["idl-build"] }
